Fixed a couple of layout bugs.

--- a/dev_www/css/components/btn.styl
+++ b/dev_www/css/components/btn.styl
@@ -81,5 +81,5 @@
 			border-right pxToRem(20) solid $blue
 			left -(pxToRem(20))
 
-	& + .btn-cta
-		margin-top $smallSpace
+	// & + .btn-cta
+	// 	margin-top $smallSpace
